# nova

./: .gitignore  .stylish-haskell.yaml  nova.cabal
app/: Main.hs
src/Language/Nova/: CodeGen.hs  Lexer.hs  Parser.hs
test/: Spec.hs
test_pgms/: fac.nv  hello.nv  hello2.nv
