name:                nova
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nova#readme
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
copyright:           2017 Ömer Sinan Ağacan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Language.Nova.Lexer
    Language.Nova.Parser
  build-depends:
    array,
    base >= 4.7 && < 5,
    bytestring,
    containers,
    megaparsec,
    mtl,
    text
  default-language:    Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    TypeFamilies
  ghc-options:         -Wall

executable nova
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    base,
    nova
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite nova-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base,
    directory,
    filepath,
    nova,
    tasty,
    tasty-hunit
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/nova
